--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "naive-ui": "^2.41.0",
     "pinia": "^2.3.1",
     "unplugin-auto-import": "^19.1.0",
